<resources>
    <string name="app_name">명지대학교</string>
    <string name="action_settings">Settings</string>
    <string name="mju_home_page_url">http://www.mju.ac.kr</string>
    <string name="select_campus">캠퍼스 선택</string>
    <string-array name="seoul_yongin_campus_array">
        <item>인문 캠퍼스</item>
        <item>자연 캠퍼스</item>
    </string-array>
    <string name="img_desc">img</string>
    <string name="menu_title">Category</string>
    <string name="menu_section1_title">Guide</string>
    <string name="menu_food">식단안내</string>
    <string name="menu_library">도서관</string>
    <string name="menu_campusmap">캠퍼스맵</string>
    <string name="menu_traffic">교통안내</string>
    <string name="menu_entrance">입학안내</string>
    <string name="menu_phone">전화안내</string>
    <string name="menu_section2_title">Community</string>
    <string name="menu_community">커뮤니티</string>
    <string name="menu_notice">공지사항</string>
    <string name="menu_section3_title">ETC</string>
    <string name="menu_qna">통합민원</string>
    <string name="menu_introduce">학교소개</string>
    <string name="menu_energy">에너지절약나눔</string>
    <string name="menu_timetable">시간표</string>
    <string name="app_version">Ver 2.53</string>
    <string name="developer_info_title">개발자 정보</string>
    <string name="developer_info_department1">명지대학교 전산정보원</string>
    <string name="developer_info_department2">어플리케이션 개발 클럽 (MDC)</string>
    <string name="developer_info_hello1">꾸준한 노력과 개선으로 좀 더 편리한</string>
    <string name="developer_info_hello2">어플리케이션을 만들도록 하겠습니다</string>
    <string name="feedback">버그 및 피드백 보내기</string>
    <string name="developer_info_hello3">따뜻한 관심에 감사드립니다</string>
    <string name="main_notice_notice">공지</string>
    <string name="main_notice_ceremony">행사</string>
    <string name="main_notice_school_affairs">학사</string>
    <string name="main_notice_schalorship">장학</string>
    <string name="main_notice_career">경력</string>
    <string name="pref_name">mjuapp_pref</string>
    <string name="pref_key_user_id">user_id</string>
    <string name="pref_key_auto_login">auto_login</string>
    <string name="pref_key_save_user_id">save_user_id</string>
    <string name="pref_key_user_pw">user_pw</string>
    <string name="pref_std_name">std_name</string>
    <string name="pref_app_notice_show_again">app_notice_show_again</string>
    <string name="pref_photo_notice_show_again">photo_notice_show_again</string>
    <string name="html_param_login_main_user_id">userID</string>
    <string name="html_param_login_main_user_pw">userPW</string>
    <string name="html_param_login_mobile_user_id">userId</string>
    <string name="html_param_login_mobile_user_pw">userPw</string>
    <string name="text_login">로그인</string>
    <string name="text_id">아이디</string>
    <string name="text_passwd">비밀번호</string>
    <string name="text_autologin">자동 로그인</string>
    <string name="text_save_user_id">아이디 저장</string>
    <string name="url_login_main">https://sso.mju.ac.kr/swift/login/loginCheck.jsp</string>
    <string name="url_login_mobile">https://m.mju.ac.kr/mbs/mjumob/jsp/login/login_mobile.jsp</string>
    <string name="url_login_myiweb">https://sso.mju.ac.kr/swift/login/login_myiweb.jsp</string>
    <string name="url_cookie_main">sso.mju.ac.kr</string>
    <string name="url_cookie_mobile_01">m.mju.ac.kr</string>
    <string name="url_cookie_mobile_02">.mju.ac.kr</string>
    <string name="url_cookie_myiweb">myiweb.mju.ac.kr</string>
    <string name="html_login_success_myiweb">popup_sso_success.jsp</string>
    <string name="html_login_success_main">/SSO/ssoLinkService?RSP=www.mju.ac.kr</string>
    <string name="html_login_success_mobile">/mbs/mjumob/index.jsp</string>
    <string name="html_login_success_main_pwchange">/swift/login/login_pwchange.jsp?RSP=www.mju.ac.kr</string>
    <string name="url_home_mypage">http://www.mju.ac.kr/mbs/mjukr/jsp/mypage/mypageMyinfo.jsp?id=mjukr_100100000000</string>
    <string name="msg_login_id_insufficient">아이디를 입력하세요</string>
    <string name="msg_login_pw_insufficient">패스워드를 입력하세요</string>
    <string name="msg_login_fail">입력하신 정보가 올바르지 않습니다</string>
    <string name="msg_network_error_weak_signal">네트워크 상태가 불안정합니다\n정상적인 서비스를 위해 다시 시도해주십시요</string>
    <string name="msg_network_error_not_connection">정상적인 서비스를 이용하기 위해선 네트워크 연결이 필요합니다. 네트워크 연결을 확인해주세요</string>
    <string name="msg_login_alert">로그인 후 사용가능합니다</string>
    <string name="msg_no_list">등록된 게시물이 없습니다</string>
    <string name="msg_search_bar_hint">검색어를 입력하세요</string>
    <string name="title_search">검색 결과</string>
    <string name="write_success">글 등록에 성공하였습니다.</string>
    <string name="write_fail">글 등록에 실패하였습니다.</string>
    <string name="getting_page_info_fail">페이지 정보를 얻는데 실패했습니다.\n다시 시도해 주세요.</string>
    <string name="getting_info_fail">정보를 가져오는데 실패했습니다.\n다시 시도해 주십시오</string>
    <string name="file_size_10m">파일 크기는 10M를 넘을 수 없습니다.</string>
    <string name="del_picture">사진 삭제</string>
    <string name="check">확인</string>
    <string name="cancel">취소</string>
    <string name="no_offer_write_function">현 게시판에서는 쓰기 기능을 지원하지 않습니다.</string>
    <string name="board_write_url">https://www.mju.ac.kr/board/boardWriteExecute.mbs</string>
    <string name="not_available_storage">저장장치를 이용할 수 없습니다.</string>
    <string name="url_phone">http://m.mju.ac.kr/mbs/mjumob2/subview.jsp?id=mjumob_060000000000</string>
    <string name="url_library">http://m.lib.mju.ac.kr/index.ax</string>
    <string name="myiweb_sub_menu_title">MyIweb</string>
    <string name="myiweb_sub_menu_timetable">시간표확인</string>
    <string name="myiweb_sub_menu_credit">성적확인</string>
    <string name="myiweb_sub_menu_check_grade">졸업학점확인</string>
    <string name="notice_sidemenu_title">공지사항</string>
    <string name="notice_sidemenu_general">일반공지</string>
    <string name="notice_sidemenu_event">행사공지</string>
    <string name="notice_sidemenu_grade">성적/수강공지</string>
    <string name="notice_sidemenu_bachelor">기타학사공지</string>
    <string name="notice_sidemenu_scholarship">장학/학자금공지</string>
    <string name="notice_sidemenu_job">경력/취업공지</string>
    <string name="notice_sidemenu_bid">입찰공지</string>
    <string name="green_write_complaint_prompt">민원 분류</string>
    <string name="green_write_content_hint">우리대학내 불필요한 전등,전열 등의 시설물이 켜져있으면 현장의 사진과 함께 글을 올려주세요. 담당자가 속히 조치해 드리며 추후 포상의 기회가 주어집니다.\n\n사진을 선택 후 목록에서 사진 파일 이름을 선택하면 목록에서 삭제할 수 있습니다.\n</string>
    <string name="msg_load_more_last">마지막 페이지입니다</string>
    <string name="text_list_load_more_btn">Load more..</string>
    <string name="msg_green_write_file_delete_content">사진 목록에서 삭제하시겠습니까?</string>
    <string name="msg_green_write_upload_limit">사진 업로드 개수는 3개로 제한됩니다</string>
    <string name="msg_download_fail">다운로드 실패</string>
    <string name="msg_download_progress">다운로드 중입니다</string>
    <string name="msg_implement_fail_download_file">해당파일을 실항할 수 있는 어플리케이션이 없습니다</string>
    <string name="uri_file_save_directory">/mjudownload/</string>
    <string name="url_entrance_app_pkg_name">com.kr.mncapro.mju</string>
    <string name="url_entrance_app_market">market://details?id=com.kr.mncapro.mju</string>
    <string name="url_library_app_pkg_name">mjlib://kr.ac.mjlib.library</string>
    <string name="url_library_app_market">market://details?id=kr.ac.mjlib.library</string>
    <string name="complaint_sidemenu_title">통합민원센터</string>
    <string name="complaint_sidemenu_chapel">채플</string>
    <string name="complaint_sidemenu_scholarship">장학/학자금대출</string>
    <string name="complaint_sidemenu_bus">통학</string>
    <string name="complaint_sidemenu_facility">편의(복지)시설</string>
    <string name="complaint_sidemenu_handicap">장애학생지원센터</string>
    <string name="complaint_sidemenu_military">병사/예비군/민방위</string>
    <string name="complaint_sidemenu_interchange">국제교류/유학</string>
    <string name="complaint_sidemenu_certificate">휴복학/학생증/증명서</string>
    <string name="complaint_sidemenu_bachelor">학사</string>
    <string name="complaint_sidemenu_suggestion">건의</string>
    <string name="complaint_status_stanby">대기</string>
    <string name="complaint_url">http://www.mju.ac.kr/mbs/mjukr/jsp/complaint/</string>
    <string name="complaint_url2">http://www.mju.ac.kr/mbs/mjukr/jsp/complaint2/</string>
    <string name="complaint_write_spinner_prompt">민원분류</string>
    <string name="complaint_write_title">통합민원센터 글쓰기</string>
    <string name="complaint_write_article_content_hint">통합민원센터 모바일 버전에서는 첨부파일 기능이 지원되지 않습니다.</string>
    <string name="complaint_write_article_email_hint">e-mail</string>
    <string name="complaint_write_article_phone_hint">연락처</string>
    <string name="complaint_write_article_selection">민원 분류를 선택하세요</string>
    <string-array name="complaint_write_spinner_arr">
        <item>채플</item>
        <item>장학/학자금대출</item>
        <item>통학</item>
        <item>편의(복지)시설</item>
        <item>장애학생지원센터</item>
        <item>병사/예비군/민방위</item>
        <item>국제교류/유학</item>
        <item>휴복학/학생증/증명서</item>
        <item>학사</item>
        <item>건의</item>
    </string-array>
    <string-array name="complaint_write_spinner_sub_arr_chapel">
        <item>교과목상담</item>
        <item>선교지원전담</item>
        <item>채플진행</item>
        <item>행정</item>
        <item>기타</item>
    </string-array>
    <string-array name="complaint_write_spinner_sub_arr_loan">
        <item>교내장학_인문</item>
        <item>교내장학_자연</item>
        <item>교외장학_인문</item>
        <item>교외장학_자연</item>
    </string-array>
    <string-array name="complaint_write_spinner_sub_arr_commute">
        <item>인문</item>
        <item>자연</item>
    </string-array>
    <string-array name="complaint_write_spinner_sub_arr_amenities">
        <item>시설_인문</item>
        <item>시설_자연</item>
        <item>기자재_인문</item>
        <item>기자재_자연</item>
        <item>인터넷_인문</item>
        <item>인터넷_자연</item>
        <item>홈페이지</item>
        <item>웹메일</item>
        <item>보건소_인문</item>
        <item>보건소_자연</item>
        <item>주차_자연</item>
        <item>주차_인문</item>
        <item>생활관(자연)</item>
        <item>생활관(인문)</item>
        <item>동아리_인문</item>
        <item>동아리_자연</item>
        <item>학생식당_자연</item>
        <item>학생식당_인문</item>
        <item>도서관_자연</item>
        <item>도서관_인문</item>
    </string-array>
    <string-array name="complaint_write_spinner_sub_arr_handicapped">
        <item>인문</item>
        <item>자연</item>
    </string-array>
    <string-array name="complaint_write_spinner_sub_arr_military">
        <item>인문</item>
        <item>자연</item>
    </string-array>
    <string-array name="complaint_write_spinner_sub_arr_study_abroad">
        <item>한국어학당</item>
        <item>교환학생</item>
        <item>해외인턴</item>
        <item>어학연수</item>
        <item>장학</item>
    </string-array>
    <string-array name="complaint_write_spinner_sub_arr_absence">
        <item>휴학_인문</item>
        <item>휴학_자연</item>
        <item>증명서_인문</item>
        <item>증명서_자연</item>
        <item>학생증_인문</item>
        <item>학생증_자연</item>
        <item>등록금납부확인</item>
        <item>복학_인문</item>
        <item>복학_자연</item>
        <item>재입학_인문</item>
        <item>재입학_자연</item>
    </string-array>
    <string name="community_write_title">커뮤니티 글쓰기</string>
    <string name="community_write_category">카테고리</string>
    <string name="write_article_title_hint">제목을 입력하세요.</string>
    <string name="community_write_article_category_introduce">카테고리를 선택하세요.</string>
    <string name="community_write_article_writer_hint">이름을 입력하세요.</string>
    <string name="community_write_sub_category">하위 카테고리</string>
    <string name="community_write_article_content_hint">커뮤니티 모바일 버전에서는 첨부파일 기능이 지원되지 않습니다.</string>
    <string name="write_article_save_btn">저장하기</string>
    <string name="category_move_button2">&lt; 전체메뉴 </string>
    <string name="main_move_button">&lt; 메인화면</string>
    <string name="developer_move_button">개발자 정보 &gt;</string>
    <string name="login_quick_menu">퀵메뉴</string>
    <string name="login_id">ID</string>
    <string name="login_pw">PW</string>
    <string name="login_quto_login">자동로그인</string>
</resources>