<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/btn_login_to_quickmenu"
        android:layout_width="1dip"
        android:layout_height="1dip"
        android:background="@drawable/btn_quickmenu_selector"
        android:contentDescription="@string/img_desc"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/login_quick_menu_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_to_quickmenu"
        android:text="@string/login_quick_menu"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_login_text_size" />

    <TextView
        android:id="@+id/id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_login_to_quickmenu"
        android:text="@string/login_id"
        android:textColor="@android:color/white"
        android:textSize="@dimen/weather_seoul_title_size" />

    <TextView
        android:id="@+id/pw_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/id_title"
        android:layout_below="@id/id_title"
        android:text="@string/login_pw"
        android:textColor="@android:color/white"
        android:textSize="@dimen/weather_seoul_title_size" />

    <EditText
        android:id="@+id/id_input"
        android:layout_width="1dip"
        android:layout_height="1dip"
        android:layout_toRightOf="@id/id_title"
        android:background="@drawable/bg_id_input"
        android:inputType="text"
        android:lines="1"
        android:maxLength="10"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/pw_input"
        android:layout_width="1dip"
        android:layout_height="1dip"
        android:layout_alignLeft="@id/id_input"
        android:layout_below="@id/id_input"
        android:layout_toRightOf="@id/pw_title"
        android:background="@drawable/bg_id_input"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <ImageButton
        android:id="@+id/login_btn"
        android:layout_width="1dip"
        android:layout_height="1dip"
        android:layout_toRightOf="@id/id_input"
        android:background="@drawable/btn_login_selector"
        android:contentDescription="@string/img_desc"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/auto_login_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_toRightOf="@id/pw_input"
        android:text="@string/login_quto_login"
        android:textColor="@color/auto_login_textview"
        android:textSize="@dimen/main_login_auto_login_text_size" />

</RelativeLayout>